--- a/.env.example 
+++ b/.env.example 
@@ -1,5 +1,13 @@
+MINIO_ROOT_USER =
+MINIO_ROOT_PASSWORD =
+
+AWS_ACCESS_KEY_ID =
+AWS_SECRET_ACCESS_KEY =
+
 POSTGRES_USER =
 POSTGRES_PASSWORD =
 POSTGRES_DB =
+
 PGADMIN_DEFAULT_EMAIL =
 PGADMIN_DEFAULT_PASSWORD =
+
